environments/default/nginx/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: nginx
  name: nginx
  labels:
    app: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:latest
