environments/default/nginx/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    kubernetes.io/ingress.class: traefik
  labels:
    app: nginx
spec:
  rules:
  - host: nginx.pollux.peciak.xyz
    http:
      paths:
      - backend:
          service:
            name: nginx
            port: 
              number: 80
        path: /
        pathType: Prefix  

  tls:
  - hosts:
    - nginx.pollux.peciak.xyz
    secretName: nginx-pollux-peciak-xyz-tls
